--- a/vicuna-13b-GPTQ-4bit-128g.ipynb
+++ b/vicuna-13b-GPTQ-4bit-128g.ipynb
@@ -15,11 +15,11 @@
       "execution_count": 1,
       "metadata": {
         "id": "VCFOzsQSHbjM",
-        "outputId": "2490e067-42dc-4337-b6d1-22df7bfc1acf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "2490e067-42dc-4337-b6d1-22df7bfc1acf"
       },
       "outputs": [
         {
@@ -876,14 +876,14 @@
       "cell_type": "code",
       "source": [
         "%cd /content/text-generation-webui\n",
-        "!python server.py --share --wbits 4 --groupsize 128 --no-stream --verbose --extensions api --public-api"
+        "!python server.py --share --wbits 4 --groupsize 128 --no-stream --verbose --extensions api --public-api --chat"
       ],
       "metadata": {
-        "id": "yUcL4pRzuo4Q",
-        "outputId": "a80d4485-34fe-44fc-c5a7-a2033ffa29a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yUcL4pRzuo4Q",
+        "outputId": "a80d4485-34fe-44fc-c5a7-a2033ffa29a6"
       },
       "execution_count": null,
       "outputs": [
